customize window (icon and drawing)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,11 @@ edition = "2021"
 [dependencies]
 async-std = "1.12.0"
 flacenc = "0.3.0"
+image = "0.24.7"
 num-complex = "0.4.4"
 rodio = "0.17.1"
+softbuffer = "0.3.3"
+tiny-skia = "0.11.2"
 wavegen = "0.4.1"
 winit = "0.28.7"
 
