--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 async-std = "1.12.0"
 flacenc = "0.3.0"
 image = "0.24.7"
+lyon = "1.0.1"
 num-complex = "0.4.4"
 rodio = "0.17.1"
 softbuffer = "0.3.3"
